# CMakeList.txt : CMake project for Kmean_Kneighbour, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Kmean_Kneighbour "Kmean_Kneighbour.cpp" "Kmean_Kneighbour.h")

# TODO: Add tests and install targets if needed.
